# databricks-dab-project

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: validate.yaml
docs/: DAB_DEVELOPMENT_GUIDE.md
notebooks/bronze/: sample_notebook.py
resources/: sample_workflow.yml
src/: README.md  setup.py
src/common/: __init__.py
src/common/ingestion/: __init__.py
src/common/python_base_package/: README.md  setup.py
src/common/python_base_package/common_package/ingestion/: __init__.py
src/common/python_base_package/common_package/transforms/: __init__.py
src/common/python_base_package/common_package/utils/: __init__.py  logging_utils.py
src/common/transforms/: __init__.py
src/common/utils/: logging.py
